# crab_feast

./: .gitignore  Cargo.toml  README.md  build_android.sh  build_ios.sh  build_wasm.sh
assets/characters/animations/: Dance.glb
assets/characters/animations/Amy/: Idle.glb  Jogging.glb  Jump.glb  Left_Strafe.glb  Left_Strafe_Walk.glb  Left_Turn.glb  Right_Strafe.glb  Right_Strafe_Walk.glb  Right_Turn.glb  RunbaDancing.glb  Running.glb  SillyDancing.glb  Walking.glb  left turn (2).glb  right turn (2).glb
crab_feast/: Cargo.toml
crab_feast/src/: assets.rs  camera.rs  control.rs  crab_main.rs  event.rs  fps.rs  input.rs  lib.rs  locomotion.rs  movement.rs  root_motion.rs  scene.rs  state.rs  ui.rs
crab_feast/src/crab_ui/: main_ui.rs  mod.rs
crab_feast/src/ui/: input_layer.rs  loading.rs  mod.rs  move_input_layer.rs  rotate_input_layer.rs
crab_feast/src/utils/: mod.rs
crab_feast_library/: Cargo.toml
crab_feast_library/src/: lib.rs
crab_feast_library/src/net/: mod.rs  net_plugin.rs
crab_feast_library/src/ui/: joysticks.rs  mod.rs
crab_feast_library/src/utils/: mod.rs  quadtree.rs
crab_feast_ui/fps/: Cargo.toml
crab_feast_ui/fps/src/: lib.rs
crab_feast_ui/joysticks/: Cargo.toml
crab_feast_ui/joysticks/src/: joystick.rs  lib.rs  marionette.rs  prelude.rs
crab_feast_ui/joysticks_deprecated/: Cargo.toml
crab_feast_ui/joysticks_deprecated/src/: lib.rs
launcher/: mod.rs
launcher/mobile/: Cargo.toml  Makefile  android_key.txt  build_android.sh  build_rust_deps.sh  game_mobile.jks
launcher/mobile/android/: local.properties  settings.gradle
launcher/mobile/android/app/: CMakeLists.txt  build.gradle
launcher/mobile/android/app/src/main/: AndroidManifest.xml
launcher/mobile/android/app/src/main/java/org/crab_feast/mobile/: MainActivity.java
launcher/mobile/crab_feast_mobile.xcodeproj/: project.pbxproj
launcher/mobile/ios/: Makefile
launcher/mobile/ios/crab_feast_mobile.xcodeproj/: project.pbxproj
launcher/mobile/ios/crab_feast_mobile.xcodeproj/xcshareddata/xcschemes/: crab_feast_mobile.xcscheme
launcher/mobile/ios/game_mobile.xcodeproj/: project.pbxproj
launcher/mobile/ios/game_mobile.xcodeproj/xcshareddata/xcschemes/: game_mobile.xcscheme
launcher/mobile/ios/ios-src/: Info.plist
launcher/mobile/src/: lib.rs  main.rs
launcher/pc/: Cargo.toml
launcher/pc/src/: main.rs
launcher/wasm/: Cargo.toml  assets  index.html
launcher/wasm/src/: main.rs
