[workspace]
members = [
    # Launchers
    "launcher/mobile",
    "launcher/pc",
    "launcher/wasm",
    # Game
    "crab_feast",
    # Game Library
    "crab_feast_library",
    # UI Components
    "crab_feast_ui/joysticks",
    "crab_feast_ui/fps"]
resolver = "2"
default-members = ["launcher/pc"]

[workspace.dependencies]
bevy                    = { version = "0.18.0-rc.1" }
bevy_rapier2d           = "0.29.0"
bevy_replicon           = "0.36.0"
bytes                   = "1.9.0"
rand                    = "0.8.5"
serde                   = "1.0.216"
bevy_replicon_renet     = "0.12.0"
log                     = "0.4.29"
