[package]
name = "crab_feast"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace                  = true
bevy_rapier2d.workspace         = true
bevy_replicon.workspace         = true
bevy_replicon_renet.workspace   = true
serde.workspace                 = true
rand.workspace                  = true
bytes.workspace                 = true
crab_feast_library = { path = "../crab_feast_library" }
crab_feast_ui_joysticks = { path = "../crab_feast_ui/joysticks" }
crab_feast_ui_fps = { path = "../crab_feast_ui/fps" }
