[package]
name = "mobile"
# Version is required by `cargo-apk`, though this value will never change.
version = "0.0.0"
edition = "2021"
description = "crab_feast for building an iOS or Android app"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "crab_feast_mobile"
crate-type = ["lib", "cdylib"]

[dependencies]
bevy.workspace = true
crab_feast = {path = "../../crab_feast"}
log.workspace = true
android_logger = "0.12"  # 用于将Rust日志输出到Android Logcat
cfg-if = "1.0"           # 用于跨平台条件编译